@@ -1,5 +1,7 @@
 *SVN*
 
+* SQLite: use AUTOINCREMENT primary key in >= 3.1.0.  #6588 [careo]
+
 * Cache inheritance_column.  #6592 [Stefan Kaes]
 
 * Firebird: decimal/numeric support.  #6408 [macrnic]
